
2014-03-06
- bdos/fsdir.c bdos/fsdrive.c: Don't test return value from MGET(DND), it
  only returns if it succeeds. (RFB)
- bdos/fsdrive.c bdos/fsmain.c bdos/fsopnclo.c: Don't test return value
  from MGET(OFD), it only returns if it succeeds. (RFB)
- bdos/fsdir.c bdos/fsopnclo.c: Don't test return value from makofd(), it
  only returns if it succeeds. (RFB)
- bios/blkdev.c bios/disk.c bios/disk.h bios/xhdi.c: Moved XHReadWrite()
  implementation to disk_rw(). (VRI)
- bios/disk.c bios/disk.h bios/xhdi.c: Moved XHGetCapacity() implementation
  to disk_get_capacity(). (VRI)
- bios/disk.c bios/disk.h bios/xhdi.c: Moved XHInqTarget() and XHInqTarget2()
  implementation to disk_inquire(). (VRI)
- bios/blkdev.c bios/disk.c bios/disk.h: Moved nonflop_mediach() to
  disk_mediach(). (VRI)
- bdos/fsdir.c: Fix occasional internal memory leak (OFD) in xrmdir(). (RFB)
- bios/blkdev.c bios/blkdev.h bios/disk.c bios/disk.h: Moved most unit and bus
  stuff to disk.c. (VRI)
- bios/blkdev.c bios/blkdev.h bios/disk.c bios/disk.h: Physical disk functions
  now take a unit number as argument. (VRI)

2014-03-07
- bdos/fs.h bdos/fsdir.c bdos/fsmain.c: Move makofd() in preparation for
  future updates. (RFB)
- bdos/fsdir.c bdos/fsopnclo.c: Code cleanup: makofd() now updates the
  OFD pointer in the DND. (RFB)
- bdos/fs.h bdos/fsdir.c bdos/osmem.c: Fix the '40-folder problem' inherited
  from early Atari TOS. (RFB)
- bios/disk.c: Use disk_rw() internally instead of DMAread(). (VRI)
- bdos/fs.h: Code cleanup: remove unused #defines. (RFB)

2014-03-08
- bdos/fsdir.c include/asm.h include/portab.h: Added new swpcopyw() function
  and improved xgsdtof() a.k.a. Fdatime(). (VRI)
- bios/disk.c bios/disk.h: New flag UNIT_NATFEATS for units managed by NatFeats.
  Our internal drivers are never used for those ones. (VRI)
- bdos/fs.h bdos/fsio.c bdos/fsopnclo.c: Do not check Fopen() mode (R,W,RW)
  in Fread()/Fwrite() - just like Atari TOS. (RFB)